YTDB-592: anchorClass not null for optimization check